# api/docs/swagger.json
@@ -4,34 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/Vender": {
-            "get": {
-                "description": "Get vender details by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "vender_no",
-                        "name": "vender_no",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Vender"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/center": {
             "get": {
                 "description": "Get center details by ID",
@@ -82,6 +54,34 @@
                         "description": "成功",
                         "schema": {
                             "$ref": "#/definitions/response.NyukaInputResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/vender": {
+            "get": {
+                "description": "Get vender details by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "vender_no",
+                        "name": "vender_no",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Vender"
                         }
                     }
                 }
